source/stylesheets/site.scss
@charset "utf-8";
@import "normalize";
@import "../../node_modules/bootstrap/scss/bootstrap";

$base-color: #fff;
$text-color: #444;
$main-color: darken(#87cefa, 20%);
$main-color-dark: darken(#00bfff, 20%);
$title-color: #fff;
$sub-color: #ccc;
$accent-color: #FF9F80;

/*-----------------------------------------------------------------------
  base
-----------------------------------------------------------------------*/

body {
	background-color: $main-color;
	border-color: $main-color;
	font-size: 14px;
}

.margin-top {
	margin-top: 20px;
}

.center {
	text-align: center;
}

h1:not(.navbar-brand) {
	border-bottom: solid 2px $main-color;
	font-size: 22px;
	font-weight: bold;
	margin-top: 15px;
	margin-bottom: 0;
}

h2 {
	border-bottom: solid 1px $main-color;
	border-left: solid 10px $main-color;
	border-right: solid 1px $main-color;
	border-top: solid 1px $main-color;
	font-size: 16px;
	font-weight: bold;
	margin-top: 15px;
	margin-bottom: 0;
	padding: 5px 10px;
}

h3, h4, h5, h6 {
	font-size: 14px;
	font-weight: bold;
	margin-top: 15px;
	margin-bottom: 0;
}

p {
	margin-top: 15px;
	margin-bottom: 0;
}

ul:not(.navbar-nav), ol {
	margin-top: 15px;
	margin-bottom: 0;
}

main img {
	max-width: 1024px;
	@include media-breakpoint-down(md) {
		max-width: 300px;
	}
}

.red {
	color: red;
}

code {
	display: inline-block;
	font-weight: bold;
	font-size: 1.25em;
	color: $accent-color;
}

/*-----------------------------------------------------------------------
  navigation tag
-----------------------------------------------------------------------*/

.navbar-light {
	background-color: $main-color !important;
	border-color: $main-color;
	/*
	background: -webkit-linear-gradient(to bottom, $main-color 0%, $main-color-dark 100%);
	background: linear-gradient(to bottom, $main-color 0%, $main-color-dark 100%);
	border-color: $main-color;
	*/
}

h1.navbar-brand {
	color: $title-color;
	font-size: 25px;
	@include media-breakpoint-up(lg) {
		font-size: 48px;
	}
	font-weight: 800;
	a {
		color: $title-color;
		text-decoration: none;
	}
	img.logo {
		height: auto;
		margin-right: 0;
		@include media-breakpoint-up(lg) {
			height: 60px;
			position: absolute;
			top: 10px;
			left: 10px;
		}
		@include media-breakpoint-down(md) {
			height: 40px;
			position: absolute;
			top: 10px;
			left: 10px;
		}
	}
	span {
		margin-left: 1em;
		a {
			display: inline;
			padding: 0;
			img {
				height: auto;
				padding: 0;
				position: absolute;
				top: 28px;
				width: 24px;
			}
			img.Facebook {
				right: 56px;
			}
			img.Twitter {
				right: 16px;
			}
		}
	}
}

a.nav-link {
	color: $title-color !important;
	text-decoration: none;
}

li.nav-item {
	font-size: 13px;
}

li.nav-item.active {
	background-color: $title-color !important;
	a {
		color: $main-color !important;
	}
}

li.nav-item.new {
	a {
		white-space: pre;
	}
	a:before {
		background: $accent-color;
		border-radius: 5px;
		color: $title-color;
		content: "New!";
		font-size: .75em;
		font-weight: bold;
		display: inline-block;
		padding: 3px 3px 2px;
		margin-right: 5px;
		text-align: center;
	}
}

.dropdown-menu {
	position: static !important;
}

.fixed-top-md-down {
	@include media-breakpoint-down(md) {
		position: fixed;
		top: 0;
		right: 0;
		left: 0;
		z-index: 1030;
	}
}

.navbar {
	@include media-breakpoint-down(md) {
		padding: 0.25rem 0.25rem 0.5rem 0.5rem !important;
	}
}

/*-----------------------------------------------------------------------
  sidebar
-----------------------------------------------------------------------*/

.sidebar {
	background-color: $main-color !important;
	border-color: $main-color;
/*
	background: -webkit-linear-gradient(to bottom, $main-color 0%, $main-color-dark 100%);
	background: linear-gradient(to bottom, $main-color 0%, $main-color-dark 100%);
	border-color: $main-color;
*/
	background-color: $main-color;
	top: 70px;
	bottom: 0;
	left: 0;
	z-index: 1000;
	padding: 0;
	overflow-x: hidden;
	overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
}

main {
	padding-left: 0 !important;
	background-color: $base-color;
	border-color: $main-color;

	@include media-breakpoint-up(lg) {
		top: -29px;
		bottom: 0;
	}
	@include media-breakpoint-down(md) {
		top: 50px;
		bottom: 30px;
	}
}

/*-----------------------------------------------------------------------
  footer
-----------------------------------------------------------------------*/

footer {
	background-color: $main-color;
	/*
	background: -webkit-linear-gradient(to bottom, $main-color 0%, $main-color-dark 100%);
	background: linear-gradient(to bottom, $main-color 0%, $main-color-dark 100%);
	*/
	border-color: $main-color;
	color: $title-color;
	margin-top: 15px;
	a {
		color: $title-color;
	}
	small {
		margin-left: 2em;
	}
	p {
		margin: 0px;
	}
	img.icon {
		max-height: 2ex;
		max-width: 7.5em;
	}
}


/*-----------------------------------------------------------------------
  time table
-----------------------------------------------------------------------*/

.session-heading {
	padding-top: .5em;
	border-top: 1px solid $sub-color;
}

.day-section-heading {
	margin: .375em 0;
}

/*-----------------------------------------------------------------------
  section content
-----------------------------------------------------------------------*/

.session-section-content {
	border: 4px double $sub-color;
	margin: 5em 0;
	padding: 2em;
	font-size: 15px;
	p {
		font-size: 15px;
	}
}

a .session-section-content {
	color: $text-color;
}

.session-presenters ol {
	list-style: none;
	li {
		border: 1px solid $sub-color;
		text-align: center;
	}
}

.session-presenter div {
	display: table-cell;
}

.session-presenter-picture img {
	max-width: 100px;
	max-height: 100px;
	vertical-align: middle;
}

.session-presenter-name {
	font-size: 15px;
}

.session-presenter-affiliation {
	font-size: 12px;
}

.session-introduction {
	font-weight: bold;
}

.session-section-title {
	border-bottom: solid 3px $sub-color;
	margin-bottom: 2em;
}

/*-----------------------------------------------------------------------
  interactive session
-----------------------------------------------------------------------*/

.session-interactive-title {
	border-bottom: solid 3px $sub-color;
	margin-top: 1em;
	margin-bottom: 1em;
	font-weight: bold;
}

.session-poster {
	border-bottom: solid 1px $sub-color;
}

